fix sidebar overlap on mobile

--- a/css/template.less
+++ b/css/template.less
@@ -958,7 +958,9 @@ div.dw-content > div.dw__toc {
     aria-expanded: false !important;
     display: none !important;
 }
-
+div.dw-sidebar-content {
+  clear: both;
+}
 
 /*buttons*/
 .dt-buttons.btn-group {
